fixed gap issues

--- a/style.css
+++ b/style.css
@@ -1185,9 +1185,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  width: 80%;
+  width: 90%;
   height: 100%;
   margin-top: 20px;
+  gap: 20px;
 }
 .section-13 .my-tv {
   display: flex;
@@ -1206,6 +1207,7 @@ body {
   padding-top: 40px;
   padding-bottom: 20px;
 }
+
 .section-13 .inner-2 .my-tv .sub-section-1 {
   display: flex;
   flex-direction: column;
